<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypes="http://www.w3.org/2001/XMLSchema-instance"?>
<package format="3">
  <name>data_recorder</name>
  <version>0.1.0</version>
  <description>Launch files for recording sensor data bags</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
